--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#C0C0C0</color>
     <color name="lavender">#E6E6FA</color>
-
+    <color name="grey1">#DCDCDC</color>
 </resources>
