--- a/app/src/main/res/layout/fragment_currency.xml
+++ b/app/src/main/res/layout/fragment_currency.xml
@@ -28,13 +28,16 @@
         app:layout_constraintStart_toEndOf="@+id/button_swap"
         app:layout_constraintTop_toTopOf="@+id/button_swap" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/button_detail"
+        android:textAllCaps="false"
         android:layout_marginBottom="@dimen/margin_16"
         android:layout_marginTop="@dimen/margin_32"
+        android:background="@color/purple_500"
+        android:theme="@style/Widget.Material3.Button.TextButton"
         app:layout_constraintTop_toBottomOf="@id/edittext_from"
         app:layout_constraintEnd_toEndOf="@+id/edittext_to"
         app:layout_constraintStart_toStartOf="@+id/edittext_from" />
